k8s/apps/wireguard/wireguard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
spec:
  selector:
    app: wireguard
  ports:
    - port: 51821
      targetPort: 51821
