k8s/apps/wireguard/wireguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard
spec:
  ingressClassName: traefik
  rules:
    - host: wg.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wireguard
                port:
                  number: 51821
